--- a/gc_mod/css/styles.css
+++ b/gc_mod/css/styles.css
@@ -49,6 +49,7 @@
       background-color: grey;
       float: right;
       margin: 15px;
+      border: 1px solid black;
     }
   
   @media (min-width: 992px) {
