--- a/gc_mod/css/styles.css
+++ b/gc_mod/css/styles.css
@@ -5,13 +5,17 @@
   h1 {
     margin-bottom: 15px;
     text-align: center;
+    font-size: 175%;
   }
 
   h2 {
     position: relative;
-    border: 1px solid black;
+    border: 2px solid black;
     text-align: center;
+    font-size: 125%;
     float: right;
+    right: -2px;
+    top: -2px;
     width: 40%;
     color: black;
     margin: 0px;
@@ -49,7 +53,7 @@
       background-color: grey;
       float: right;
       margin: 15px;
-      border: 1px solid black;
+      border: 2px solid black;
     }
   
   @media (min-width: 992px) {
